--- a/karl/views/static/ux2/plugins/popper-gridbox/popper.gridbox.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/popper.gridbox.less
@@ -32,6 +32,22 @@ body > .loading-indicator label {
     .c-grid {
         height: 500px;
     }
+    .c-footer {
+    }
+    .paginationBar.c-header {
+        // reverse the box
+        .css3_border_radius(.5em .5em 0 0);
+        margin-top: @space * 1em;
+        margin-bottom: 0;
+        .c-filter {
+            float: right;
+            .c-filter-input {
+                width: 180px;
+            }
+        }
+    }
+
+
 }
 
 
@@ -64,20 +80,6 @@ body > .loading-indicator label {
         padding: 4px 8px;
         line-height: 100%;
     }
-
-    /* checkbox cell formatting */
-
-    /*
-    .cell-sel input[type="checkbox"] {
-        margin-left: 2px;
-        margin-top: 17px;
-    }
-    */
-        /*margin-top: 10px;*/
-
-
-
-
 
     /* The cells can be formatted by column name
      * (.cell-${columnname}), or by the cellformatter.
