Fix the multiupload css

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -4,7 +4,7 @@
 @import "css/_mixins.less";
 @import "plugins/popper-gridbox/karl.wikitoc.less";
 @import "plugins/popper-gridbox/popper.gridbox.less";
-
+@import "plugins/karl-multifileupload/multifileupload.less";
 
 
 #bcpanel-global-logo {
