--- a/karl/views/static/ux2/plugins/karl-multifileupload/multifileupload.less
+++ b/karl/views/static/ux2/plugins/karl-multifileupload/multifileupload.less
@@ -2,6 +2,8 @@
 
 /* styles for karl.multifileupload */
 
+@import "plugins/karl-multifileupload/jquery.ui.plupload.css";
+
 .karl-multifileupload-dialog-wrapper { 
 
     .ui-dialog-titlebar {
@@ -32,7 +34,7 @@ body .plupload {
 
     .plupload_header_content {
         /* override logo to ours */
-        background-image: url("../../images/logo.gif");
+        background-image: url("../images/logo.gif");
         padding-left: 20px;
         padding-top: 8px;
     }
