make #this work from chatter pushdown post; remove random choice from chatter pushdown code

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -21,6 +21,7 @@
                 <input type="text" name="recipient" id="chatter-recipient" data-source="{{chatter_url}}search_profiles.json"/>
                 <input type="hidden" name="private" value="true"/>
                 {{/private}}
+                <input type="hidden" name="this_url" value="{{thisUrl}}"/>
                 <textarea id="{{class}}-panel-text" name="text" class="new-post-text"></textarea>
                 <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
               </div>
