changed post to messages in chatter pushdown

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -3,13 +3,13 @@
     {{#streams}}
     <div id="{{class}}" class="panel">
       <div class="panel-header">
-        <h3>{{title}}<span class="updating">Updating&hellip;</span></h3>
+        <h3>{{title}}s<span class="updating">Updating&hellip;</span></h3>
         <div class="post-options">
           <a href="#" class="add-new-post" title="New Post">
-            New Post
+            New {{title}}
           </a>
-          <a href="{{has_more_news_url}}" class="view-all-posts" title="View All Posts">
-            View All Posts
+          <a href="{{has_more_news_url}}" class="view-all-posts" title="View All {{title}}s">
+            View All {{title}}s
           </a>
         </div>
         <div class="new-post">
