added placeholder text and search icon in chatter pushdown new message, removed help text and fixed link for View All Messages

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -337,3 +337,13 @@
 		}
 	}
 }
+form#chatter-post-form {
+	position: relative;
+	button.searchButton {
+		top: 0;
+    	margin-top: 0;
+	}
+}
+#chatter-recipient {
+	width: 100%;
+}
