--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -199,7 +199,8 @@ input.search-site-box, input.search-chatter-box {
 }
 
 form#search-form button.searchButton,
-form#chatter-searchbox button.searchButton {
+form#chatter-searchbox button.searchButton,
+form#chatter-post-form button.searchButton {
     background: transparent url('../img/search_icon_dark.png') 50% 50% no-repeat;
     border: none;
     width: 35px;
