restyled chatter user info box

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -44,25 +44,41 @@
 		font-size: 1em;
 	}
 	.user-avatar {
-		width: 40px
+		.avatar {
+			width: 35px;
+		}
+		width: 35px;
 		position: relative;
 		float: left;
 	}
 	.user-info {
 		position: relative;
-		margin-left: 50px;
+		margin-left: 45px;
+		.profile-link {
+			display: block;
+			font-size: 0.7em;
+		}
 	}
 	.user-stats {
-		margin-left: 50px;
+		clear: both;
+		display: block;
 		position: relative;
 		color: #000000;
+		margin-top: 10px;
 		ul {
 			padding: 0;
 			margin: 0;
 			list-style: none;
 			overflow: hidden;
 			> li {
+				strong {
+					font-size: 1.5em;
+					display: block;
+				}
+				width: 28%;
+				margin-right: 2px;
 				font-size: 0.75em;
+				line-height: 1.5em;
 				display: inline-block;
 				padding: 5px;
 				vertical-align: middle;
