--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -636,9 +636,9 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 #chatter-wrapper.active a{bottom:1.05em;color:#fff !important;text-shadow:none !important;}#chatter-wrapper.active a:after{display:none !important;}
 #chatter-user-info{color:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;margin:0 0 30px 0;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}#chatter-user-info a{color:#000000;}#chatter-user-info a:hover{text-decoration:underline;}
 #chatter-user-info strong{font-size:1em;}
-#chatter-user-info .user-avatar{width:40px	position: relative;float:left;}
-#chatter-user-info .user-info{position:relative;margin-left:50px;}
-#chatter-user-info .user-stats{margin-left:50px;position:relative;color:#000000;}#chatter-user-info .user-stats ul{padding:0;margin:0;list-style:none;overflow:hidden;}#chatter-user-info .user-stats ul>li{font-size:0.75em;display:inline-block;padding:5px;vertical-align:middle;background-color:#eadecc;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
+#chatter-user-info .user-avatar{width:35px;position:relative;float:left;}#chatter-user-info .user-avatar .avatar{width:35px;}
+#chatter-user-info .user-info{position:relative;margin-left:45px;}#chatter-user-info .user-info .profile-link{display:block;font-size:0.7em;}
+#chatter-user-info .user-stats{clear:both;display:block;position:relative;color:#000000;margin-top:10px;}#chatter-user-info .user-stats ul{padding:0;margin:0;list-style:none;overflow:hidden;}#chatter-user-info .user-stats ul>li{width:28%;margin-right:2px;font-size:0.75em;line-height:1.5em;display:inline-block;padding:5px;vertical-align:middle;background-color:#eadecc;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}#chatter-user-info .user-stats ul>li strong{font-size:1.5em;display:block;}
 #chatter-user-info .user-stats ul>li:last-child{margin-right:0;}
 #chatter-user-info img{float:left;margin-right:10px;}
 .chatter-options-panel{font-size:0.9em;clear:both;margin-top:16px;opacity:0;}
