--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -634,7 +634,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 #chatter-wrapper.active,#chatter-wrapper.active a{background:#aaaaaa url('../img/vertical_stripes.png') top left repeat !important;position:relative;z-index:1;margin:0;}
 #chatter-wrapper.active{bottom:-0.9em;}
 #chatter-wrapper.active a{bottom:1.05em;color:#fff !important;text-shadow:none !important;}#chatter-wrapper.active a:after{display:none !important;}
-#chatter-user-info{color:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;margin:0 0 30px 0;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}#chatter-user-info a{color:#000000;}#chatter-user-info a:hover{text-decoration:underline;}
+#chatter-user-info{-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;color:#8f806f;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;margin:0 0 30px 0;}#chatter-user-info a{color:#000000;}#chatter-user-info a:hover{text-decoration:underline;}
 #chatter-user-info strong{font-size:1em;}
 #chatter-user-info .user-avatar{width:35px;position:relative;float:left;}#chatter-user-info .user-avatar .avatar{width:35px;}
 #chatter-user-info .user-info{position:relative;margin-left:45px;}#chatter-user-info .user-info .profile-link{display:block;font-size:0.7em;}
@@ -668,7 +668,9 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .conversation-controls{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.9em;}.conversation-controls a{margin-right:10px;}.conversation-controls a:hover{text-decoration:underline;}
 .in-reply-to:hover{cursor:pointer;}
 .btn-chatter{color:#ffffff !important;}
-.chatter-messages-users{-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:inline;float:left;width:31.25%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;}.chatter-messages-users .find-user input{width:97%;}
+.chatter-messages-users{zoom:1;*zoom:1;margin:0 0.6665em 1.333em;padding:0.6665em;background:#c8b6a1;text-shadow:none;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:inline;float:left;width:31.25%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;}.chatter-messages-users:before,.chatter-messages-users:after{display:table;content:"";zoom:1;}
+.chatter-messages-users:after{clear:both;}
+.chatter-messages-users .find-user .search-chatter-box{width:97%;}
 .chatter-messages-users .user-item{-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;position:relative;padding:10px 0;margin-bottom:5px;cursor:pointer;}.chatter-messages-users .user-item .user-item-avatar{position:absolute;left:5px;top:5px;}.chatter-messages-users .user-item .user-item-avatar .avatar{width:40px;position:relative;float:left;}
 .chatter-messages-users .user-item .user-item-content{position:relative;margin-left:55px;}.chatter-messages-users .user-item .user-item-content .summary{font-family:Georgia,serif;}
 .chatter-messages-users .user-item:hover,.chatter-messages-users .user-item.selected{background-color:#dbcfc1;}
@@ -676,7 +678,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .chatter-messages .message-item .message-item-content{position:relative;margin-left:48px;}.chatter-messages .message-item .message-item-content .content{font-family:Georgia,serif;}
 .chatter-messages .message-item.other-user{background-color:#e2e2e2;text-align:right;float:right;}.chatter-messages .message-item.other-user .message-item-avatar{right:10px;top:5px;}.chatter-messages .message-item.other-user .message-item-avatar .avatar{float:right;}
 .chatter-messages .message-item.other-user .message-item-content{margin-left:0;margin-right:48px;}
-.chatter-messages .chatter-post-add-form{position:relative;float:left;display:block;width:100%;margin-top:10px;}.chatter-messages .chatter-post-add-form textarea.quip-text{width:70%;min-height:40px;}
+.chatter-post-add-form{position:relative;display:block;width:100%;margin-top:10px;}.chatter-post-add-form textarea.quip-text{width:98%;min-height:40px;}
 form#chatter-post-form{position:relative;}form#chatter-post-form button.searchButton{top:0;margin-top:0;}
 #chatter-recipient{width:100%;}
 #radar-panel{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}#radar-panel:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
