--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -262,6 +262,10 @@ a#global-logo {
     display:inline;
 }
 
+#show-only-tag {
+    background-color: #ffffff !important;
+}
+
 /* PEOPLE PICTURE TRANSITION CSS */
 .profilesWrapper {
     background-color: #ffffff;
