--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -71,10 +71,8 @@
 			list-style: none;
 			overflow: hidden;
 			> li {
-				strong {
-					font-size: 1.5em;
-					display: block;
-				}
+				.css3_border_radius();
+				background-color: @bodyBg !important;
 				width: 28%;
 				margin-right: 2px;
 				font-size: 0.75em;
@@ -82,13 +80,10 @@
 				display: inline-block;
 				padding: 5px;
 				vertical-align: middle;
-				background-color: @bodyBg;
-				.css3_border_radius();
-				// a {
-				// 	strong {
-				// 		display: block;
-				// 	}
-				// }
+				strong {
+					font-size: 1.5em;
+					display: block;
+				}
 			}
 			> li:last-child {
 				margin-right: 0;
@@ -128,6 +123,7 @@
 			margin-bottom: 5px;
 		}
 		.new-post-text {
+			background-color: #ffffff !important;
 			width: 100%;
 			height: 100px;
 			font-size: 0.8em;
@@ -369,5 +365,6 @@ form#chatter-post-form {
 	}
 }
 #chatter-recipient {
+	background-color: #ffffff !important;
 	width: 100%;
 }
