--- a/karl/views/static/ux2/css/ie.less
+++ b/karl/views/static/ux2/css/ie.less
@@ -186,8 +186,34 @@ form.addKeyword {
   .chatter-content {
     behavior: url(PIE.htc);
   }
+  .panel-item {
+    behavior: url(PIE.htc);
+  }
 }
-
+#chatter-user-info {
+  behavior: url(PIE.htc);
+  .user-stats {
+    li {
+      behavior: url(PIE.htc);
+    }
+  }
+}
+#chatter-posts {
+  .panel-item {
+    behavior: url(PIE.htc);
+  }
+}
+#chatter-messages {
+  .message-item {
+    behavior: url(PIE.htc);
+  }
+}
+.chatter-messages-users {
+  behavior: url(PIE.htc);
+  .user-item {
+    behavior: url(PIE.htc);
+  }
+}
 /* MEDIA QUERIES */
 @media only screen and (min-width: 640px) {
   form#search-form {
