--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -250,6 +250,10 @@ a#global-logo {
     margin-bottom: 2em;
 }
 
+.blogEntry {
+  margin-bottom: 1.5em;
+}
+
 .notification {
     .actions {
         margin: 1em 0 1em 2.75em;
