added moderator and private badges on communities

--- a/karl/views/static/ux2/css/elements/labels.less
+++ b/karl/views/static/ux2/css/elements/labels.less
@@ -38,8 +38,8 @@
 .label-inverse             { background-color: @grayDark; }
 .label-inverse:hover       { background-color: darken(@grayDark, 10%); }
 
-.label-private        { background-color: @errorText; }
+.label-private        { background-color: @errorText; vertical-align: top;}
 .label-private:hover  { background-color: darken(@errorText, 10%); }
 
-.label-moderator          { background-color: @successText; }
+.label-moderator          { background-color: @successText;  vertical-align: top;}
 .label-moderator:hover    { background-color: darken(@successText, 10%); }
