fixed text wrapping issues on community members and person name bolder

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -321,10 +321,9 @@ a#global-logo {
     }
     .profileInfoBox {
       float: left;
-      margin: 1em 0 0.2em;
+      margin: 0.5em;
       line-height: 1.5em;
       overflow: hidden;
-      width: 118px;
     }
     .profileNoWrap {
       white-space: nowrap;
