ux2: implement the start / end date fields on community forms (now this is added to each community form which will work _provided_ that the start_date, end_date, all_day fields are used for this and just for this.)

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -5,6 +5,7 @@
 @import "plugins/popper-gridbox/karl.wikitoc.less";
 @import "plugins/popper-gridbox/popper.gridbox.less";
 @import "plugins/karl-multifileupload/multifileupload.less";
+@import "plugins/karl-datetimepicker/datetimepicker.less";
 
 
 #bcpanel-global-logo {
