ux2 calendar setup: js and css fixes

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -1365,3 +1365,16 @@ table#calendar span.middot {
 
 
 
+/* Calendar setup page extras */
+
+.setup-add-cal {
+    table.layers { 
+        background-color: transparent;
+        td {
+            border-top: 0;
+            border: 0;
+            padding: 0;
+        }
+    }
+}
+
