--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -265,6 +265,7 @@
 	font-family: @fancyFont;
 	font-size: 0.8em;
 	.find-user {
+		margin-bottom: 10px;
 		.search-chatter-box {
 			width: 97%;
 		}
@@ -294,6 +295,15 @@
 		}
 		&:hover, &.selected {
 			background-color: @baseColor2;
+		}
+		&.selected {
+			background-color: @baseColor2;
+			&:before {
+        		.trianglePointer(right, @baseColor2, 1.2em);
+        		position: absolute;
+        		top: 1.1em;
+        		right: -1.2em;
+    		}
 		}
 	}
 }
@@ -351,10 +361,10 @@
 	//float: left;
 	display: block;
 	width: 100%;
-	margin-top: 10px;
+	margin-bottom: 10px;
 	textarea.quip-text {
 		width: 98%;
-		min-height: 40px;
+		height: 100px;
 	}
 }
 form#chatter-post-form {
