--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -562,6 +562,15 @@ a.next{margin:0 0 0 .5em;}.generatedcontent a.next:after{margin-left:-0.2em;bord
 .search-portlet{display:inline;float:left;width:18.75%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}.search-portlet .nav-list form{padding:0;margin:0;}
 .search-content{display:inline;float:left;width:77.08333333333334%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
 body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;text-align:center;font-size:0.75em;font-family:Verdana,sans-serif;}
+#main #left{display:inline;float:left;width:22.916666666666664%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}#main #left .menu{zoom:1;*zoom:1;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;margin:0 0.6665em 1.333em;padding:0.6665em;background:#82adbf;text-shadow:none;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}#main #left .menu:before,#main #left .menu:after{display:table;content:"";zoom:1;}
+#main #left .menu:after{clear:both;}
+#main #left .menu h3{font-size:1.333;margin-top:0;}
+#main #left .menu a{color:#ffffff;}#main #left .menu a:hover{background:none;color:#eadecc;}
+#main #left .menu ul.nav{padding-left:0;}
+#main #center{display:inline;float:left;width:47.91666666666667%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
+#main #right{display:inline;float:left;width:22.916666666666664%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}#main #right .generic-portlet{zoom:1;*zoom:1;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;margin:0 0.6665em 1.333em;padding:0.6665em;background:#c8b6a1;text-shadow:none;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}#main #right .generic-portlet:before,#main #right .generic-portlet:after{display:table;content:"";zoom:1;}
+#main #right .generic-portlet:after{clear:both;}
+#main #right .generic-portlet h3{font-size:1.333;margin-top:0;}
 .pushdown{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;display:none;}.pushdown:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
 .pushdown .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
 .open .pushdown{display:block;}
