--- a/karl/views/static/ux2/css/elements/badges.less
+++ b/karl/views/static/ux2/css/elements/badges.less
@@ -42,6 +42,8 @@
 .badge-moderator:hover    { background-color: darken(@successText, 10%); }
 
 .badge-following {
+  display: inline-block;
+  .ie7-inline-block();
   font-family: @fancyFont;
   font-size: 0.8em;
   font-weight: normal;
@@ -51,6 +53,8 @@
 .badge-following:hover { background-color: darken(@successText, 10%); }
 
 .badge-not-following {
+  display: inline-block;
+  .ie7-inline-block();
   font-family: @fancyFont;
   font-size: 0.8em;
   font-weight: normal;
