--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -1376,5 +1376,16 @@ table#calendar span.middot {
             padding: 0;
         }
     }
+
+    // Huh???
+    tr:first-child {
+        > th:first-child {
+            .css3_border_radius(.5em 0 0 0);
+        }
+        > th:last-child {
+            .css3_border_radius(0 .5em 0 0);
+        }
+    }
+
 }
 
