calendar setup: finish styling of tables

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -1377,15 +1377,17 @@ table#calendar span.middot {
         }
     }
 
+    // add roundies to the top of the tables in layout
     // Huh???
     tr:first-child {
         > th:first-child {
-            .css3_border_radius(.5em 0 0 0);
+            .css3_border_radius(.3em 0 0 0);
         }
         > th:last-child {
-            .css3_border_radius(0 .5em 0 0);
+            .css3_border_radius(0 .3em 0 0);
         }
     }
+
 
 }
 
