added new section style for title display only, moved section header to macro, added style to intranet home

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -884,6 +884,10 @@ body > footer {
     }
 }
 
+section > header.header {
+    margin-bottom: 1em;
+}
+
 /* @group RADAR PANEL */
 @import "elements/pushdowns.less";
 /* @end */
