added a badge following community listing showing the number of community

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -888,6 +888,12 @@ section > header.header {
     margin-bottom: 1em;
 }
 
+section > header > h1 {
+    > .badge {
+        font-size: 0.45em;
+    }
+}
+
 /* @group RADAR PANEL */
 @import "elements/pushdowns.less";
 /* @end */
