added separator to intranet middle content

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -904,6 +904,16 @@ body > footer {
     }
     #center {
         .col(6);
+        .generic-portlet {
+            margin-top: 1em;
+            text-shadow: none;
+            position: relative;
+            border-bottom: 1px darken(@baseColor2, 10%) dotted;
+            h3 {
+                font-size: 1.333;
+                margin-top: 0;
+            }
+        }
     }
     #right {
         .col(3);
