ux2: wire the autocomplete on the memberbox widget which is on the 'Add Existing Users' page.
Changes made to affect the tag box:

- pressing ENTER on the drop down adds the tag at once, no wait for second ENTER.

- Get rid of the TAB hack. Just use up-down arrows to navigate in the drop down is naturally
  supported unless the users _insist_ on the TAB, this is a much cleaner solution.
  (TAB was kept to provide the highest possible compatibility with ux1.)

- Delete, clicking (X): I fixed its wiring

- focusing an item from the drop down does _not_ fill the input.

--- a/karl/ux2/forms/templates/formish/widgets/KarlUserProfileLookup/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlUserProfileLookup/widget.html
@@ -8,7 +8,8 @@
                 prevals:  {"records": []},
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
                 name: "${field.name}",
-                showLinkUrl: head_data.app_url + '/profiles'
+                showLinkUrl: head_data.app_url + '/profiles',
+                autocompleteURL: head_data.context_url + 'member_search.json'
              });
          });
   </script>
