ux2: Wire correctly the edit tags widget on the Edit Files page (since I just fixed the edit tags widget, it is expected that all the forms that have edit tags will start working now.) This fixes LP #983869

--- a/karl/ux2/forms/templates/formish/widgets/KarlUserProfileLookup/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlUserProfileLookup/widget.html
@@ -1,9 +1,7 @@
 <fieldset>
   <span id="${field.cssname}"></span>
   <script language="javascript" type="text/javascript">
-         $(document).ready(function() {
- 
-             // bind the widget
+         jQuery(function($) {
              $("#${field.cssname}").addexistingmember({
                 prevals:  {"records": []},
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
