--- a/karl/ux2/forms/templates/formish/widgets/KarlTagsEdit/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlTagsEdit/widget.html
@@ -1,14 +1,16 @@
 <fieldset>
   <span id="${field.cssname}"></span>
   <script language="javascript" type="text/javascript">
-         $(document).ready(function() {
- 
-             // bind the widget
+         jQuery(function($) {
+             var head_data = window.head_data;
              $("#${field.cssname}").tagbox({
-                prevals:  {"records": []},
+                prevals:  ${field.widget.json_taginfo(field.value)},
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
                 name: "${field.name}",
-                partialForm: true
+                partialForm: true,
+                addTagURL: head_data.context_url + 'jquery_tag_add',
+                delTagURL: head_data.context_url + 'jquery_tag_del',
+                autocompleteURL: head_data.app_url + '/tag_search.json'
              });
          });
   </script>
