--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -368,3 +368,10 @@ a#global-logo {
   font-size: 220%;
   color: green;
 }
+
+a.priority {
+  padding-bottom: 5px;
+  font-style: italic;
+  font-weight: bold;
+  display: block;
+}
