fixed forum table style

--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -197,3 +197,4 @@ a#global-logo{padding-left:35px;}
 .tagweight7{font-size:220%;color:green;}
 a.priority{padding-bottom:5px;font-style:italic;font-weight:bold;display:block;}
 #calendar_portlet .event_title{padding-left:20px;}
+table.messageBoard th.forums{width:25%;}
