--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -379,3 +379,9 @@ a.priority {
 #calendar_portlet .event_title {
     padding-left: 20px;
 }
+
+table.messageBoard {
+    th.forums {
+        width: 25%;
+    }
+}
